# surrealdb.rs

./: .gitignore  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
examples/actix/: Cargo.toml
examples/actix/src/: error.rs  main.rs  person.rs
examples/concurrency/: main.rs
examples/query/: Cargo.toml  main.rs
examples/select/: Cargo.toml  main.rs
examples/transaction/: Cargo.toml  main.rs
examples/version/: Cargo.toml  main.rs
src/: embedded.rs  err.rs  lib.rs  net.rs
src/method/: authenticate.rs  begin.rs  cancel.rs  commit.rs  content.rs  create.rs  delete.rs  export.rs  health.rs  import.rs  invalidate.rs  kill.rs  live.rs  merge.rs  mod.rs  patch.rs  query.rs  select.rs  set.rs  signin.rs  signup.rs  unset.rs  update.rs  use_db.rs  use_ns.rs  version.rs
src/method/query/: mod.rs  query.rs  response.rs
src/method/tests/: mod.rs  protocol.rs  server.rs  types.rs
src/param/: credentials.rs  jwt.rs  mod.rs  query.rs  resource.rs
src/param/server_addrs/: fdb.rs  http.rs  indxdb.rs  mem.rs  mod.rs  rocksdb.rs  tikv.rs  ws.rs
src/protocol/: mod.rs
src/protocol/http/: mod.rs  native.rs  wasm.rs
src/protocol/ws/: mod.rs  native.rs  wasm.rs
src/storage/: mod.rs  native.rs  wasm.rs
tests/: native-http.rs  native-mem.rs  native-ws.rs  types.rs
